--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         "proengsoft",
         "laravel",
         "validator",
+        "validation",
+        "proengsoft",
         "jQuery Validation"
     ],
     "homepage": "https://github.com/proengsoft/laravel-jsvalidation",
@@ -19,19 +21,11 @@
         }
     ],
     "require": {
-        "php" : ">=5.3.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit" : "4.*"
+        "php" : ">=5.4.0"
     },
     "autoload": {
         "psr-4": {
             "Proengsoft\\JsValidation\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Proengsoft\\JsValidation\\Test\\": "tests"
         }
     },
     "scripts": {
