--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction --dev
 
+script:
+
