--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
     "require": {
         "php" : ">=5.4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit" : "4.*"
+    },
     "autoload": {
         "psr-4": {
             "Proengsoft\\JsValidation\\": "src"
