--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 
 php:
+  - 5.3
   - 5.4
   - 5.5
   - 5.6
@@ -8,7 +9,10 @@ php:
 
 before_script:
   - travis_retry composer self-update
-  - travis_retry composer install --prefer-source --no-interaction --dev
+  - travis_retry composer install --no-interaction --prefer-source --dev
 
 script:
+  - phpunit --coverage-text --coverage-clover=coverage.clover
 
+after_script:
+  - php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
