--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit colors="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" stopOnError="false" stopOnFailure="false" stopOnIncomplete="false" stopOnSkipped="false" bootstrap="test/Bootstrap.php">
+<phpunit bootstrap="vendor/autoload.php"
+         backupGlobals="false"
+         backupStaticAttributes="false"
+         colors="true"
+         verbose="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="false"
+         stopOnFailure="false">
     <testsuites>
-        <!--
-        <testsuite name="all">
-            <directory suffix="Test.php">test/</directory>
+        <testsuite name="League Test Suite">
+            <directory>tests</directory>
         </testsuite>
-        -->
     </testsuites>
     <filter>
         <whitelist>
@@ -13,12 +20,10 @@
         </whitelist>
     </filter>
     <logging>
-        <!--
         <log type="tap" target="build/report.tap"/>
         <log type="junit" target="build/report.junit.xml"/>
         <log type="coverage-html" target="build/coverage" charset="UTF-8" yui="true" highlight="true"/>
         <log type="coverage-text" target="build/coverage.txt"/>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
-        -->
     </logging>
 </phpunit>
