--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,6 @@
 /phpunit.xml.dist   export-ignore
 /.scrutinizer.yml   export-ignore
 /tests              export-ignore
+
+# Don't check generated files in github language statistics
+public/js/* linguist-vendored
