--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         }
     },
     "scripts": {
+        "post-package-update": "php artisan vendor:publish --force --provider='Proengsoft\\JsValidation\\JsValidationServiceProvider' --tag=public"
     }
 
 }
