--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
 
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*"
+        "phpunit/phpunit" : "4.*",
+        "mockery/mockery":"0.9.*"
     },
     "autoload": {
         "psr-4": {
