--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -19,6 +19,8 @@ checks:
 tools:
     php_analyzer: true
     php_code_coverage: false
+    external_code_coverage:
+            timeout: 600    # Timeout in seconds.
     php_code_sniffer:
         config:
             standard: PSR2
