--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php" : ">=5.4.0",
         "illuminate/support": "~5.0",
         "illuminate/validation": "~5.0",
-        "illuminate/contracts": "5.0.*",
+        "illuminate/contracts": "~5.0",
         "illuminate/view": "~5.0",
         "illuminate/config": "~5.0"
 
