--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
-        "mockery/mockery":"0.9.*"
+        "mockery/mockery":"0.9.*",
+        "laravel/framework":"~5.0"
     },
     "autoload": {
         "psr-4": {
