--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "illuminate/view": "~5.0",
         "illuminate/config": "~5.0",
         "illuminate/http": "~5.0",
-        "illuminate/foundation": "~5.0",
+        "illuminate/foundation": "~5.0"
 
     },
     "require-dev": {
