--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
-        "mockery/mockery":"0.9.*",
-        "laravel/framework":"~5.0"
+        "mockery/mockery":"0.9.*"
     },
     "autoload": {
         "psr-4": {
