--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,9 @@
     <filter>
         <whitelist>
             <directory suffix=".php">src/</directory>
+            <exclude>
+                <file>src/JsValidationServiceProvider.php</file>
+            </exclude>
         </whitelist>
     </filter>
     <logging>
