--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
+        "phpunit/phpunit": "~4.0",
         "mockery/mockery":"0.9.*"
     },
     "autoload": {
