--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 5.5
   - 5.6
   - hhvm
+  - nightly
 
 before_script:
   - travis_retry composer self-update
@@ -15,5 +16,5 @@ script:
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} != "hhvm" ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
 
