Fixed tests and dependencies

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "illuminate/contracts": "~5.0",
         "illuminate/view": "~5.0",
         "illuminate/config": "~5.0",
-        "illuminate/http": "~5.0"
+        "illuminate/http": "~5.0",
+        "illuminate/foundation": "~5.0"
 
     },
     "require-dev": {
