--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,16 +10,13 @@
          processIsolation="false"
          stopOnFailure="false">
     <testsuites>
-        <testsuite name="League Test Suite">
+        <testsuite name="Laravel JsValidation Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
     <filter>
         <whitelist>
             <directory suffix=".php">src/</directory>
-            <exclude>
-                <file>src/JsValidationServiceProvider.php</file>
-            </exclude>
         </whitelist>
     </filter>
     <logging>
