Fix author info

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         {
             "name": "Albert Moreno",
             "email": "albert@memorylimit.net",
-            "homepage": "http://memorylimit.net",
-            "role": "DevOps"
+            "homepage": "https://github.com/torrentalle"
         }
     ],
     "require": {
