--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,28 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
   - 7.0
   - hhvm
+env:
+  - LARAVEL=5.0
+  - LARAVEL=5.1
+  - LARAVEL=5.2
+  - LARAVEL=5.3
+matrix:
+  include:
+  - php: 5.4
+    env: LARAVEL=5.0
 
 before_script:
-  - travis_retry composer self-update
-  - travis_retry composer install --no-interaction --prefer-source
+  - travis_retry COMPOSER=tests/composer-$LARAVEL.json composer self-update
+  - travis_retry COMPOSER=tests/composer-$LARAVEL.json composer install --no-interaction --prefer-source
 
 script:
   - phpunit --coverage-clover=coverage.clover
 
-after_script:
-  - bash -c 'if [ "${TRAVIS_PHP_VERSION:0:4}" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi;'
-  - bash -c 'if [ "${TRAVIS_PHP_VERSION:0:4}" != "hhvm-nightly" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi;'
+#after_script:
+#  - bash -c 'if [ "${TRAVIS_PHP_VERSION:0:4}" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi;'
+#  - bash -c 'if [ "${TRAVIS_PHP_VERSION:0:4}" != "hhvm-nightly" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi;'
 
