Support Auto-Discovery
https://medium.com/@taylorotwell/package-auto-discovery-in-laravel-5-5-ea9e3ab20518

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,16 @@
             "Proengsoft\\JsValidation\\": "src",
             "Proengsoft\\JsValidation\\Tests\\": "tests"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Proengsoft\\JsValidation\\JsValidationServiceProvider"
+            ],
+            "aliases": {
+                "JsValidator": "Proengsoft\\JsValidation\\Facades\\JsValidatorFacade"
+            }
+        }
     }
 
 }
