--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,13 @@
     ],
     "require": {
         "php" : ">=5.4.0",
-        "illuminate/support": "~5.0",
-        "illuminate/validation": "~5.0",
-        "illuminate/contracts": "~5.0",
-        "illuminate/view": "~5.0",
-        "illuminate/config": "~5.0",
-        "illuminate/http": "~5.0",
-        "illuminate/translation": "~5.0"
+        "illuminate/support": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
+        "illuminate/validation": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
+        "illuminate/contracts": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
+        "illuminate/view": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
+        "illuminate/config": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
+        "illuminate/http": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
+        "illuminate/translation": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*"
 
     },
     "require-dev": {
@@ -37,7 +37,11 @@
     },
     "autoload": {
         "psr-4": {
-            "Proengsoft\\JsValidation\\": "src",
+            "Proengsoft\\JsValidation\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "Proengsoft\\JsValidation\\Tests\\": "tests"
         }
     },
