--- a/composer.json
+++ b/composer.json
@@ -18,22 +18,27 @@
             "name": "Albert Moreno",
             "email": "albert@memorylimit.net",
             "homepage": "https://github.com/torrentalle"
+        },
+        {
+            "name": "Anton Komarev",
+            "email": "a.komarev@cybercog.su",
+            "homepage": "http://ell.folio.su/"
         }
     ],
     "require": {
-        "php" : ">=5.4.0",
-        "illuminate/support": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
-        "illuminate/validation": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
-        "illuminate/contracts": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
-        "illuminate/view": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
-        "illuminate/config": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
-        "illuminate/http": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*",
-        "illuminate/translation": "5.0.*||5.1.*||5.2.*||5.3.*||5.4.*"
+        "php": ">=5.6.4",
+        "illuminate/support": "5.4.*",
+        "illuminate/validation": "5.4.*",
+        "illuminate/contracts": "5.4.*",
+        "illuminate/view": "5.4.*",
+        "illuminate/config": "5.4.*",
+        "illuminate/http": "5.4.*",
+        "illuminate/translation": "5.4.*"
 
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "mockery/mockery":"~0.9"
+        "phpunit/phpunit": "~5.7",
+        "mockery/mockery": "~0.9.4"
     },
     "autoload": {
         "psr-4": {
@@ -55,5 +60,4 @@
             }
         }
     }
-
 }
