--- a/composer.json
+++ b/composer.json
@@ -27,18 +27,18 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "illuminate/support": "5.4.*",
-        "illuminate/validation": "5.4.*",
-        "illuminate/contracts": "5.4.*",
-        "illuminate/view": "5.4.*",
         "illuminate/config": "5.4.*",
+        "illuminate/contracts": "5.4.*",
         "illuminate/http": "5.4.*",
-        "illuminate/translation": "5.4.*"
-
+        "illuminate/support": "5.4.*",
+        "illuminate/translation": "5.4.*",
+        "illuminate/validation": "5.4.*",
+        "illuminate/view": "5.4.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7",
-        "mockery/mockery": "~0.9.4"
+        "friendsofphp/php-cs-fixer": "^2.3",
+        "mockery/mockery": "~0.9.4",
+        "phpunit/phpunit": "~5.7"
     },
     "autoload": {
         "psr-4": {
@@ -59,5 +59,8 @@
                 "JsValidator": "Proengsoft\\JsValidation\\Facades\\JsValidatorFacade"
             }
         }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
