Fix StyleCI config

--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,13 +1,15 @@
 preset: laravel
 
-linting: true
-
 enabled:
   - strict
   - unalign_double_arrow
 
 disabled:
-  - short_array_syntax
+  - concat_without_spaces
+  - phpdoc_no_package
+  - logical_not_operators_with_successor_space
+  - length_ordered_imports
+  - simplified_null_return
 
 finder:
   exclude:
