--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "illuminate/config": "5.4.*|5.5.*|5.6.*|5.7.*",
-        "illuminate/contracts": "5.4.*|5.5.*|5.6.*|5.7.*",
-        "illuminate/http": "5.4.*|5.5.*|5.6.*|5.7.*",
-        "illuminate/support": "5.4.*|5.5.*|5.6.*|5.7.*",
-        "illuminate/translation": "5.4.*|5.5.*|5.6.*|5.7.*",
-        "illuminate/validation": "5.4.*|5.5.*|5.6.*|5.7.*",
-        "illuminate/view": "5.4.*|5.5.*|5.6.*|5.7.*"
+        "illuminate/config": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/contracts": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/http": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/support": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/translation": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/validation": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/view": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.10",
