--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.10",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "~5.7|^7.0"
+        "phpunit/phpunit": "~5.7|^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
