--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 sudo: false
 
 php:
+  - 5.6
   - 7.0
   - 7.1
   - 7.2
@@ -10,7 +11,35 @@ php:
 
 env:
   matrix:
-  - LARAVEL=5.5
+    - LARAVEL=5.4
+    - LARAVEL=5.5
+    - LARAVEL=5.6
+    - LARAVEL=5.7
+    - LARAVEL=5.8
+    - LARAVEL=6.0
+
+matrix:
+  exclude:
+    - php: 5.6
+      env: LARAVEL=5.5
+    - php: 5.6
+      env: LARAVEL=5.6
+    - php: 5.6
+      env: LARAVEL=5.7
+    - php: 5.6
+      env: LARAVEL=5.8
+    - php: 5.6
+      env: LARAVEL=6.0
+    - php: 7.0
+      env: LARAVEL=5.6
+    - php: 7.0
+      env: LARAVEL=5.7
+    - php: 7.0
+      env: LARAVEL=5.8
+    - php: 7.0
+      env: LARAVEL=6.0
+    - php: 7.1
+      env: LARAVEL=6.0
 
 before_script:
   - export COMPOSER=tests/composer-$LARAVEL.json
