--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "illuminate/config": "^5.4|^6.0",
-        "illuminate/contracts": "^5.4|^6.0",
-        "illuminate/http": "^5.4|^6.0",
-        "illuminate/support": "^5.4|^6.0",
-        "illuminate/translation": "^5.4|^6.0",
-        "illuminate/validation": "^5.4|^6.0",
-        "illuminate/view": "^5.4|^6.0"
+        "illuminate/config": "^5.4|^6|^7",
+        "illuminate/contracts": "^5.4|^6|^7",
+        "illuminate/http": "^5.4|^6|^7",
+        "illuminate/support": "^5.4|^6|^7",
+        "illuminate/translation": "^5.4|^6|^7",
+        "illuminate/validation": "^5.4|^6|^7",
+        "illuminate/view": "^5.4|^6|^7"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.10",
