--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
 
 env:
   matrix:
@@ -17,6 +18,7 @@ env:
     - LARAVEL=5.7
     - LARAVEL=5.8
     - LARAVEL=6.0
+    - LARAVEL=7.0
 
 matrix:
   exclude:
@@ -30,6 +32,8 @@ matrix:
       env: LARAVEL=5.8
     - php: 5.6
       env: LARAVEL=6.0
+    - php: 5.6
+      env: LARAVEL=7.0
     - php: 7.0
       env: LARAVEL=5.6
     - php: 7.0
@@ -38,8 +42,12 @@ matrix:
       env: LARAVEL=5.8
     - php: 7.0
       env: LARAVEL=6.0
+    - php: 7.0
+      env: LARAVEL=7.0
     - php: 7.1
       env: LARAVEL=6.0
+    - php: 7.1
+      env: LARAVEL=7.0
 
 before_script:
   - export COMPOSER=tests/composer-$LARAVEL.json
