removed php 7.4 from unsupported laravel versions

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,6 +2,7 @@
 <phpunit bootstrap="tests/autoload.php"
          backupGlobals="false"
          backupStaticAttributes="false"
+         beStrictAboutTestsThatDoNotTestAnything="false"
          colors="true"
          verbose="true"
          convertErrorsToExceptions="true"
