--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,14 @@ matrix:
       env: LARAVEL=6.0
     - php: 7.1
       env: LARAVEL=7.0
+    - php: 7.4
+      env: LARAVEL=5.4
+    - php: 7.4
+      env: LARAVEL=5.5
+    - php: 7.4
+      env: LARAVEL=5.6
+    - php: 7.4
+      env: LARAVEL=5.7
 
 before_script:
   - export COMPOSER=tests/composer-$LARAVEL.json
