--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -1,13 +1,12 @@
 # Number of days of inactivity before an issue becomes stale
-daysUntilStale: 60
+daysUntilStale: 5
 # Number of days of inactivity before a stale issue is closed
 daysUntilClose: 7
 # Issues with these labels will never be considered stale
 exemptLabels:
-  - bug
+  - "bug"
   - "help wanted"
-  - "MERGE ME"
-  - "NEEDS REVIEW"
+  - "enhancement"
 # Ignore issues in a milestone
 exemptMilestones: true
 # Label to use when marking an issue as stale
