--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,6 @@
             "name": "Albert Moreno",
             "email": "albert@memorylimit.net",
             "homepage": "https://github.com/torrentalle"
-        },
-        {
-            "name": "Anton Komarev",
-            "email": "a.komarev@cybercog.su",
-            "homepage": "http://ell.folio.su/"
         }
     ],
     "require": {
@@ -39,7 +34,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.10",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "~5.7|^7.0|^8.0"
+        "phpunit/phpunit": "~5.7|^7.0"
     },
     "autoload": {
         "psr-4": {
