--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,4 +25,7 @@
         <log type="junit" target="build/report.junit.xml"/>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
     </logging>
+    <php>
+        <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
+    </php>
 </phpunit>
