--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,9 @@
         "symfony/http-foundation": "^4.1|^5.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.10",
+        "orchestra/testbench": "^3.6|^4.0|^5.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "~5.7|^7.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
