--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,14 +14,14 @@ jobs:
         laravel: ['5.6', '5.7', '5.8', '6.0', '7.0']
         php: ['7.1', '7.2', '7.3', '7.4']
         exclude:
-          - php: 7.4
-            laravel: 5.6
-          - php: 7.4
-            laravel: 5.7
-          - php: 7.1
-            laravel: 6.0
-          - php: 7.1
-            laravel: 7.0
+          - laravel: 5.6
+            php: 7.4
+          - laravel: 5.7
+            php: 7.4
+          - laravel: 6.0
+            php: 7.1
+          - laravel: 7.0
+            php: 7.1
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
