--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "private": true,
   "devDependencies": {
-    "laravel-elixir": "^4.2.1"
+    "cross-env": "^7.0.2",
+    "laravel-mix": "^5.0.4"
   },
   "dependencies": {
     "jquery-validation": "^1.19.1",
     "php-date-formatter": "^1.3.4",
     "phpjs": "git://github.com/kvz/locutus.git#v1.3.2"
+  },
+  "scripts": {
+    "build": "npm run development && npm run production",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   }
 }
