--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,19 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
 
 # Ignore all test and documentation with "export-ignore".
+/.github            export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
-/.travis.yml        export-ignore
+/.hound.yml         export-ignore
+/.javascript-style.json export-ignore
+/.jshintignore      export-ignore
+/.scrutinizer.yml   export-ignore
+/.styleci.yml       export-ignore
+/CODE_OF_CONDUCT.md export-ignore
+/composer.json      export-ignore
+/gulpfile.js        export-ignore
+/package.json       export-ignore
+/package-lock.json  export-ignore
 /phpunit.xml.dist   export-ignore
 /.scrutinizer.yml   export-ignore
 /tests              export-ignore
