--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/config": "^5.6|^6.0|^7.0",
-        "illuminate/contracts": "^5.6|^6.0|^7.0",
-        "illuminate/http": "^5.6|^6.0|^7.0",
-        "illuminate/support": "^5.6|^6.0|^7.0",
-        "illuminate/translation": "^5.6|^6.0|^7.0",
-        "illuminate/validation": "^5.6|^6.0|^7.0",
-        "illuminate/view": "^5.6|^6.0|^7.0",
+        "illuminate/config": "^5.6|^6.0|^7.0|^8.0",
+        "illuminate/contracts": "^5.6|^6.0|^7.0|^8.0",
+        "illuminate/http": "^5.6|^6.0|^7.0|^8.0",
+        "illuminate/support": "^5.6|^6.0|^7.0|^8.0",
+        "illuminate/translation": "^5.6|^6.0|^7.0|^8.0",
+        "illuminate/validation": "^5.6|^6.0|^7.0|^8.0",
+        "illuminate/view": "^5.6|^6.0|^7.0|^8.0",
         "symfony/http-foundation": "^4.1|^5.0"
     },
     "require-dev": {
