--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,11 +1,15 @@
 preset: laravel
 
+risky: true
+
 enabled:
+  - strict
   - unalign_double_arrow
 
 disabled:
   - concat_without_spaces
   - phpdoc_no_package
+  - no_alternative_syntax
 
 finder:
   exclude:
