Fixed style ci config (#480)
* Fixed style ci config

Fixed The 'simplified_null_return' fixer cannot be disabled because it is not enabled by your preset.

* Enable risky for 'strict' fixer

* Removed strict fixer

* Disabled no_alternative_syntax

--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,5 +1,7 @@
 preset: laravel
 
+risky: true
+
 enabled:
   - strict
   - unalign_double_arrow
@@ -7,7 +9,7 @@ enabled:
 disabled:
   - concat_without_spaces
   - phpdoc_no_package
-  - simplified_null_return
+  - no_alternative_syntax
 
 finder:
   exclude:
