--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
+    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.0",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "babel-loader": "^8.2.1",
+    "conventional-changelog-conventionalcommits": "^4.5.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
@@ -12,6 +17,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
+    "semantic-release": "^17.2.4",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0",
     "webpack-stream": "^6.1.1"
