--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,7 @@
 name: "Lint PR Title"
 
 on:
-  pull_request_target:
-    types: [opened, synchronize, edited, reopened]
+  pull_request:
 
 jobs:
   main:
