--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v2.3.3
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       # Cache npm packages.
       - uses: actions/cache@v2
