--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -7,6 +7,7 @@ exemptLabels:
   - "bug"
   - "help wanted"
   - "enhancement"
+  - "dependencies"
 # Ignore issues in a milestone
 exemptMilestones: true
 # Label to use when marking an issue as stale
