--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,10 +11,12 @@ jobs:
     strategy:
       matrix:
         laravel: ['5.6', '5.7', '5.8', '6.0', '7.0', '8.0']
-        php: ['7.1', '7.2', '7.3', '7.4']
+        php: ['7.1', '7.2', '7.3', '7.4', '8.0']
         exclude:
           - {laravel: '5.6', php: '7.4'}
+          - {laravel: '5.6', php: '8.0'}
           - {laravel: '5.7', php: '7.4'}
+          - {laravel: '5.7', php: '8.0'}
           - {laravel: '6.0', php: '7.1'}
           - {laravel: '7.0', php: '7.1'}
           - {laravel: '8.0', php: '7.1'}
