--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,7 @@ jobs:
           - {laravel: '5.6', php: '8.0'}
           - {laravel: '5.7', php: '7.4'}
           - {laravel: '5.7', php: '8.0'}
+          - {laravel: '5.8', php: '8.0'}
           - {laravel: '6.0', php: '7.1'}
           - {laravel: '7.0', php: '7.1'}
           - {laravel: '8.0', php: '7.1'}
