--- a/composer.json
+++ b/composer.json
@@ -37,9 +37,10 @@
         "symfony/http-foundation": "^4.1|^5.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.6|^4.0|^5.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.0|^8.0"
+        "orchestra/testbench": "^3.6|^4.0|^5.0",
+        "phpunit/phpunit": "^7.0|^8.0",
+        "scrutinizer/ocular": "^1.8"
     },
     "autoload": {
         "psr-4": {
