--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,7 +32,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          coverage: pcov
+          coverage: xdebug
 
       - name: Install dependencies
         run: export COMPOSER=tests/composer-${{ matrix.laravel }}.json && composer install --no-interaction --prefer-source
@@ -42,3 +42,4 @@ jobs:
 
       - name: Code Coverage
         run: vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
+        if: matrix.laravel == '8.0' && matrix.php == '7.4'
