--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,8 +25,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.3.4
-        with:
-          fetch-depth: 0
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -38,8 +36,4 @@ jobs:
         run: export COMPOSER=tests/composer-${{ matrix.laravel }}.json && composer install --no-interaction --prefer-source
 
       - name: Execute tests
-        run: vendor/bin/phpunit --coverage-clover=coverage.clover
-
-      - name: Code Coverage
-        run: vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
-        if: matrix.laravel == '8.0' && matrix.php == '7.4'
+        run: vendor/bin/phpunit --coverage-text
