--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     "require-dev": {
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "^3.6|^4.0|^5.0",
-        "phpunit/phpunit": "^7.0|^8.0"
+        "phpunit/phpunit": "^7.0|^8.0",
+        "scrutinizer/ocular": "^1.8"
     },
     "autoload": {
         "psr-4": {
