chore: set es5 webpack target

--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -19,7 +19,10 @@ jobs:
           node-version: 14
 
       - name: Installing dependencies
-        run: npm install
+        run: npm ci
+
+      - name: Execute gulp build
+        run: gulp build
 
       - name: Execute bundlewatch
         run: npm run bundlewatch
