--- a/.gitattributes
+++ b/.gitattributes
@@ -8,7 +8,6 @@
 /.hound.yml         export-ignore
 /.javascript-style.json export-ignore
 /.jshintignore      export-ignore
-/.releaserc         export-ignore
 /.scrutinizer.yml   export-ignore
 /.styleci.yml       export-ignore
 /CODE_OF_CONDUCT.md export-ignore
@@ -17,6 +16,7 @@
 /package.json       export-ignore
 /package-lock.json  export-ignore
 /phpunit.xml.dist   export-ignore
+/release.config.js  export-ignore
 /tests              export-ignore
 
 # Don't check generated files in github language statistics
