--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,41 +5,21 @@ on:
     branches:
       - master
 
-env:
-  NODE_VERSION: 14
-
 jobs:
   release:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v2.5.0
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      # full checkout for semantic-release
       - uses: actions/checkout@v2.3.4
         with:
           fetch-depth: 0
           persist-credentials: false
 
-      # Cache npm packages.
-      - uses: actions/cache@v2.1.7
+      - name: Run automated release process with semantic-release
+        uses: cycjimmy/semantic-release-action@v2
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Installing dependencies
-        run: npm install
-
-      - name: semantic-release
-        run: npx semantic-release
+          extra_plugins: |
+            @semantic-release/git
+            @semantic-release/exec
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIT_AUTHOR_NAME: semantic-release-bot
-          GIT_AUTHOR_EMAIL: semantic-release-bot
-          GIT_COMMITTER_NAME: semantic-release-bot
-          GIT_COMMITTER_EMAIL: semantic-release-bot
