--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -11,10 +11,7 @@ jobs:
     strategy:
       matrix:
         laravel: ['6.0', '7.0', '8.0']
-        php: ['7.4', '8.0', '8.1']
-        exclude:
-          - {laravel: '6.0', php: '8.1'}
-          - {laravel: '7.0', php: '8.1'}
+        php: ['7.4', '8.0']
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
