--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,14 @@
     ],
     "require": {
         "php": "^7.2 || ^8.0",
-        "illuminate/config": "^6.0|^7.0|^8.0",
-        "illuminate/contracts": "^6.0|^7.0|^8.0",
-        "illuminate/http": "^6.0|^7.0|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0",
-        "illuminate/translation": "^6.0|^7.0|^8.0",
-        "illuminate/validation": "^6.0|^7.0|^8.0",
-        "illuminate/view": "^6.0|^7.0|^8.0",
-        "symfony/http-foundation": "^4.1|^5.0"
+        "illuminate/config": "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/contracts": "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/http": "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/translation": "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/validation": "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/view": "^6.0|^7.0|^8.0|^9.0",
+        "symfony/http-foundation": "^4.1|^5.0|^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
