--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,8 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^4.0|^5.0|^6.0",
-        "phpunit/phpunit": "^8.0"
+        "orchestra/testbench": "^4.0|^5.0|^6.0|^7.0",
+        "phpunit/phpunit": "^8.0|^9.5"
     },
     "autoload": {
         "psr-4": {
