--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "jquery-validation": "jquery-validation/jquery-validation#eb88df0e635b19703dc60bbd7728537cc7b13cc9",
+    "jquery-validation": "^1.19.4-pre",
     "locutus": "^2.0.15",
     "php-date-formatter": "^1.3.6"
   },
