--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -11,14 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        laravel: ['6', '7', '8', '9']
-        php: ['7.4', '8.0', '8.1', '8.2']
-        exclude:
-          - { laravel: '6', php: '8.1' }
-          - { laravel: '6', php: '8.2' }
-          - { laravel: '7', php: '8.1' }
-          - { laravel: '7', php: '8.2' }
-          - { laravel: '9', php: '7.4' }
+        laravel: ['9']
+        php: ['8.1', '8.2']
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
@@ -35,30 +29,6 @@ jobs:
 
       - name: Setup Problem Matchers
         run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
-
-      - name: Select Laravel 6
-        uses: nick-invision/retry@v2.8.3
-        with:
-          timeout_minutes: 5
-          max_attempts: 5
-          command: composer require "laravel/framework:6.*" "phpunit/phpunit:^8.5.8|^9.3.7" --no-update --no-interaction
-        if: "matrix.laravel == '6'"
-
-      - name: Select Laravel 7
-        uses: nick-invision/retry@v2.8.3
-        with:
-          timeout_minutes: 5
-          max_attempts: 5
-          command: composer require "laravel/framework:7.*" "phpunit/phpunit:^8.5.8|^9.3.7" --no-update --no-interaction
-        if: "matrix.laravel == '7'"
-
-      - name: Select Laravel 8
-        uses: nick-invision/retry@v2.8.3
-        with:
-          timeout_minutes: 5
-          max_attempts: 5
-          command: composer require "laravel/framework:8.*" "phpunit/phpunit:^9.3.7" --no-update --no-interaction
-        if: "matrix.laravel == '8'"
 
       - name: Select Laravel 9
         uses: nick-invision/retry@v2.8.3
