feat: laravel 10 support (#923)
* Bump dependencies for Laravel 10

* Update GitHub Actions for Laravel 10

* update matrix

* remove laravel 6 7 support

* add problem matchers

* replace setMethods with onlyMethods

* adding missing class property

* update phpunit.xml.dist

* use addMethods for methods which dont exist

* update onlyMethods / addMethods

* update onlyMethods / addMethods

* update onlyMethods / addMethods

* fix JsValidatorFacadeTest class/namespace

* replace stdObject with stdClass

* replace deprecated at() from RemoteValidationMiddlewareTest.php

* replace deprecated at() from JsValidationServiceProviderTest.php

* remove old autoloader

* remove unused method

* remove at matcher usage from JsValidatorFactoryTest.php

* prevent phpunit from running some tests twice

* remove laravel 10 only methods

---------

Co-authored-by: bytestream <kieran@supportpal.com>

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit bootstrap="tests/autoload.php"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         bootstrap="vendor/autoload.php"
          backupGlobals="false"
-         backupStaticAttributes="false"
          beStrictAboutTestsThatDoNotTestAnything="false"
          colors="true"
-         verbose="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
          processIsolation="false"
-         stopOnFailure="false">
-    <testsuites>
-        <testsuite name="Laravel JsValidation Test Suite">
-            <directory>tests</directory>
-        </testsuite>
-    </testsuites>
-    <filter>
-        <whitelist>
-            <directory suffix=".php">src/</directory>
-        </whitelist>
-    </filter>
-    <logging>
-        <log type="tap" target="build/report.tap"/>
-        <log type="junit" target="build/report.junit.xml"/>
-        <log type="coverage-clover" target="build/logs/clover.xml"/>
-    </logging>
-    <php>
-        <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
-    </php>
+         stopOnFailure="false"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.0/phpunit.xsd"
+         cacheDirectory=".phpunit.cache"
+         backupStaticProperties="false">
+  <coverage>
+    <include>
+      <directory suffix=".php">src/</directory>
+    </include>
+    <report>
+      <clover outputFile="build/logs/clover.xml"/>
+    </report>
+  </coverage>
+  <testsuites>
+    <testsuite name="Laravel JsValidation Test Suite">
+      <directory>tests</directory>
+    </testsuite>
+  </testsuites>
+  <logging>
+    <junit outputFile="build/report.junit.xml"/>
+  </logging>
+  <php>
+    <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
+  </php>
 </phpunit>
