--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        laravel: ['9']
+        laravel: ['9', '10']
         php: ['8.1', '8.2']
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
@@ -38,6 +38,14 @@ jobs:
           command: composer require "laravel/framework:9.*" "phpunit/phpunit:^9.3.7" --no-update --no-interaction
         if: "matrix.laravel == '9'"
 
+      - name: Select Laravel 10
+        uses: nick-invision/retry@v2.8.2
+        with:
+          timeout_minutes: 5
+          max_attempts: 5
+          command: composer require "laravel/framework:10.*" "phpunit/phpunit:^10" --no-update --no-interaction
+        if: "matrix.laravel == '10'"
+
       - name: Install PHP Dependencies
         uses: nick-invision/retry@v2.8.3
         with:
@@ -50,4 +58,4 @@ jobs:
 
       - name: Check code coverage
         uses: codecov/codecov-action@v3
-        if: "matrix.php == '8.1' && matrix.laravel == '9'"
+        if: "matrix.php == '8.2' && matrix.laravel == '10'"
