--- a/composer.json
+++ b/composer.json
@@ -27,19 +27,19 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/config": "^9.0",
-        "illuminate/contracts": "^9.0",
-        "illuminate/http": "^9.0",
-        "illuminate/support": "^9.0",
-        "illuminate/translation": "^9.0",
-        "illuminate/validation": "^9.0",
-        "illuminate/view": "^9.0",
+        "illuminate/config": "^9.0|^10.0",
+        "illuminate/contracts": "^9.0|^10.0",
+        "illuminate/http": "^9.0|^10.0",
+        "illuminate/support": "^9.0|^10.0",
+        "illuminate/translation": "^9.0|^10.0",
+        "illuminate/validation": "^9.0|^10.0",
+        "illuminate/view": "^9.0|^10.0",
         "symfony/http-foundation": "^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^7.0",
-        "phpunit/phpunit": "^9.5"
+        "orchestra/testbench": "^7.0|^8.0",
+        "phpunit/phpunit": "^9.5|^10.0"
     },
     "autoload": {
         "psr-4": {
