chore: drop laravel 9 support

--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -12,13 +12,11 @@ jobs:
 
     strategy:
       matrix:
-        laravel: ['9', '10', '11']
+        laravel: ['10', '11']
         php: ['8.1', '8.2', '8.3', '8.4']
         exclude:
           - laravel: '11'
             php: '8.1'
-          - laravel: '9'
-            php: '8.4'
           - laravel: '10'
             php: '8.4'
 
@@ -37,14 +35,6 @@ jobs:
 
       - name: Setup Problem Matchers
         run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
-
-      - name: Select Laravel 9
-        uses: nick-invision/retry@v3.0.0
-        with:
-          timeout_minutes: 5
-          max_attempts: 5
-          command: composer require "laravel/framework:9.*" "phpunit/phpunit:^9.3.7" --no-update --no-interaction
-        if: "matrix.laravel == '9'"
 
       - name: Select Laravel 10
         uses: nick-invision/retry@v3.0.0
